k8s/base/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel-app
  template:
    metadata:
      labels:
        app: laravel-app
    spec:
      containers:
        # --- CONTAINER 1: PHP-FPM ---
        - name: php-fpm
          image: app-placeholder
          readinessProbe:
            exec:
              command: ["php-fpm-healthcheck"]
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            exec:
              command: ["php-fpm-healthcheck"]
            initialDelaySeconds: 15
            periodSeconds: 20
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: app-code
              mountPath: /var/www

        # --- CONTAINER 2: NGINX (Sidecar) ---
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: app-code
              mountPath: /var/www

      volumes:
        - name: app-code
          emptyDir: {} # No futuro pode-se usar volumes persistentes se houver uploads
        - name: nginx-config
          configMap:
            name: nginx-config-map
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: laravel-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
