k8s/base/php-fpm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-app
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: laravel-app
  template:
    metadata:
      labels:
        app: laravel-app
    spec:
      containers:
        - name: php-fpm
          image: seu-usuario/app-laravel:latest 
          ports:
            - containerPort: 9000
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: app-code
              mountPath: /var/www
      volumes:
        - name: config-volume
          configMap:
            name: nginx-config
        - name: app-code
          emptyDir: {} 
---
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
spec:
  type: ClusterIP 
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: laravel-app
