k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: homolog
  annotations:
    # Garante que o controller do Nginx assuma a requisição
    kubernetes.io/ingress.class: nginx
    # Aumenta os timeouts para evitar o 'Empty Reply' durante processamentos longos
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 80
